--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>SugarMint</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<div id="user_nav">
-  <% if user_signed_in? %>
-    Signed in as <%= current_user.email %>. Not you?
-    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-  <% else %>
-    <%= link_to "Sign up", new_user_registration_path %> or
-    <%= link_to "Sign in", new_user_session_path %>
-  <% end %>
-</div>
-
-<%= yield %>
-
-</body>
+	<head>
+		<title>SugarMint</title>
+		<%= csrf_meta_tag %>
+		<%= render 'layouts/stylesheets' %>
+	</head>
+	<body>
+		<div class="container">
+			<%= render 'layouts/header' %>
+			<section class="round">
+				<%= yield %>
+			</section>
+			<%= render 'layouts/footer' %>
+		</div>
+	</body>
 </html>
