--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,9 @@
   This is the home page for SugarMint.com
 </p>
 <p>
+  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+</p>
+<p>
   <%= link_to "Sign up now!", new_user_registration_path, :class => "signup_button round" %>
 </p>
 
