Moving stuff around between events and pages controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
 </div>
 
 <div class="container">
-  <input type="hidden" id="server-url" data-url="<%= root_url %>">Click me</button>
+  <input type="hidden" id="server-url" data-url="<%= root_url %>"/>
 
   <%= yield %>
 
