Added foursquare login. Changes omniauth token storage table. Removed secrets from the repository

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Sugar Mint</h1>
 
 <p>
-  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+  <%= link_to "Sign in with Foursquare", user_omniauth_authorize_path(:foursquare) %>
 </p>
 <p>
   <%= link_to "Sign up now!", new_user_registration_path, :class => "signup_button round" %>
