--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
 
   <%= stylesheet_link_tag "bootstrap/bootstrap", :media => "all" %>
 
+  <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/themes/ui-lightness/jquery-ui.css", :media => "all" %>
+
   <style>
-      body {
-          padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
+    body {
+      padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    }
   </style>
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -40,16 +42,16 @@
           <li><%= link_to "Help", help_path %></li>
           <li>
             <% if user_signed_in? %>
-                <%= link_to current_user.email, timeline_path %> <!-- TODO: add ellipsis to the end ...-->
+              <%= link_to current_user.email, timeline_path %> <!-- TODO: add ellipsis to the end ...-->
             <% else %>
-                <%= link_to "Sign up", new_user_registration_path %>
+              <%= link_to "Sign up", new_user_registration_path %>
             <% end %>
           </li>
           <li>
             <% if user_signed_in? %>
-                <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+              <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
             <% else %>
-                <%= link_to "Sign in", new_user_session_path %>
+              <%= link_to "Sign in", new_user_session_path %>
             <% end %>
           </li>
         </ul>
@@ -70,8 +72,10 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<%= javascript_include_tag "application"%>
-<%= javascript_include_tag "chart"%>
+<%= javascript_include_tag "application" %>
+<%= javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"  %>
+<%= javascript_include_tag "//ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/jquery-ui.min.js"  %>
+<%= javascript_include_tag "chart" %>
 <%= javascript_include_tag "Highstock-1.2.4/js/highstock.js" %>
 
 </body>
