trying to deploy a changed app to heroku

--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag    "application" %>
 <%= javascript_include_tag "application" %>
-<%= javascript_include_tag "Highstock-1.0.Beta/js/highstock"%>
+<%= javascript_include_tag "Highstock-1.2.4/js/highstock"%>
 <%= csrf_meta_tag %> <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
