--- a/app/views/pages/timeline.html.erb
+++ b/app/views/pages/timeline.html.erb
@@ -1,2 +1,10 @@
-<div id="bgGraph" style="width: 100%; height: 300px; align: left; float:left">></div>
-<input type="text" id="datepicker" />
+<div class="row">
+  <div class="span10"><div id="bgGraph"></div></div>
+  <div class="span2">
+    <div>Select Dates</div>
+    <div>From: </div>
+    <div id="fromDate"></div>
+    <div>To: </div>
+    <div id="toDate"></div>
+  </div>
+</div>
